# LDCodex

./: .fix_all.js  .fix_all2.js  .fix_null.js  .fix_tsx.js  .fixapp.js  .gitignore  Cargo.toml  PRODUCT.md  README.md  README_EN.md  _fix_all.js  _fix_app.js  _fix_b64.txt  _fix_final.js  _fix_full.js  _fix_min.py  _fix_v2.js  _fix_v3.js  _fix_v4.js  _fix_v5.js  _fix_v6.js  _fx3.js  _fx4.js  all_fixes.patch  app_paths_hex.txt  build_log.txt  bytes_temp.txt  check.js  check_all.py  check_app.rs.py  check_end.py  check_file.py  check_fix.py  check_fixed.py  check_line.js  chk.py  ci2_log.txt  ci2_win.txt  ci3_full.txt  ci3_log.txt  (+139 more)
.backup_20260615_115645/: App.tsx  styles.css  tauri.conf.json
LDZcode/: README-LDZcode.md  do-inject.js  inject-zcode.bat  inject-zcode.ps1  test-simple.js  toggle-parallel.bat  zcode-customize.js
apps/codex-plus-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/codex-plus-manager/src-tauri/assets/: do-inject.js  inject-zcode.bat  toggle-parallel.js  zcode-customize.js
apps/codex-plus-manager/src-tauri/capabilities/: default.json
apps/codex-plus-manager/src-tauri/src/: commands.rs  fix_log.py  install.rs  lib.rs  main.rs
apps/codex-plus-manager/src-tauri/tests/: windows_subsystem.rs
apps/ldzcode-launcher/: Cargo.toml  build.rs
apps/ldzcode-launcher/src/: main.rs
bridge/: .env  .gitignore  README.md  TOOL-CALLING-REFERENCE.md  admin.mjs  bridge_stderr.txt  check-db.mjs  check.mjs  check_nginx.py  check_restart.py  check_vps.py  cleanup_tokens.mjs  config-proxy.json  config-ui.html  debug_test.mjs  debug_test2.mjs  deploy-vps.mjs  (+34 more)
(+236 files in other folders)
