[package]
name = "ldzcode-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ldzcode"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true

[build-dependencies]
winresource.workspace = true
